# MediaSync

./: Cargo.toml
src/: clapui.rs  cmdui.rs  communication.rs  config.rs  events.rs  logging.rs  main.rs  messages.rs  mod.rs  mprisplayer.rs  network.rs  players.rs  protocols.rs  state.rs  traits.rs  utils.rs  webui.rs  webview_helper.rs
src/communication/: eventgroup.rs  filetransfer.rs  ipcodec.rs  messages.rs  networking.rs
src/messages/: sync.rs
src/network/: conlist.rs  friendcodes.rs  publicaddr.rs  stun.rs  tcp.rs  udp.rs  utils.rs
src/network/publicaddr/: igdutils.rs  stunutils.rs
src/players/: debug.rs  events.rs  mpris_player.rs  mprisplayer.rs  netflix_chrome.rs  vlchttp.rs  vlcrc.rs
src/protocols/: sync.rs
src/webui/: logger.rs
static/: netflix_injector.js  webui.html
