[package]
name = "vlcsync"
version = "0.1.0"
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igd = {version = "0.10.0", features = ["aio"]}
rand = "0.7"
mpris = "2.0.0-rc2"
clap = "2.33"
tokio = {version = "0.2.15", features = ["net", "sync", "io-util", "time", "rt-core", "rt-util", "stream", "process"]}
futures = "0.3"

[features]