[package]
name = "vlcsync"
version = "0.1.0"
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
clap = "2.33"
tokio = {version = "0.2", features = ["net", "sync", "io-util", "time", "rt-core", "rt-util", "stream", "process", "rt-threaded", "full"]}
futures = "0.3"
log = {version = "0.4", features= ["std"]}
lazy_static = "1.4"
igd = {version = "0.10", features = ["aio"], optional=true}
stun_codec = {version = "0.1", optional = true}
bytecodec = {version = "0.4", optional = true}
mpris = {version = "2.0.0-rc2", optional=true}
base64 = {version = "0.12", optional=true}
serde = {version = "1.0", features=["derive"], optional=true}
hyper = {version = "0.13", optional = true}
serde_json = {version = "1.0", optional = true}
web-view = {version = "0.6", optional = true}
headless_chrome = {version = "0.9", optional = true}

[features]
default = []
mprisplayer = ["mpris"]
netflix = ["headless_chrome"]
vlchttp = ["hyper", "serde", "serde_json", "base64"]
webui = ["web-view", "serde", "serde_json"]
stunmapping = ["bytecodec", "stun_codec"]
dnsmapping = ["igd"]